# CScorer

./: .gitignore  LICENSE  README.md  config.yaml  data.json  environment.yaml  observation.json  pipe.yaml  pipe_config.yaml  pyproject.toml  temp.sql  temp2.sql  test.yaml
docs/: api.rst  conf.py  index.rst  usage.rst
notebooks/: api.ipynb  bounds.ipynb  gbif_search_datasets.ipynb  gbif_search_organisations.ipynb  gbif_set_region.ipynb  iNatAPI.ipynb  inatAPi2.ipynb  set_region.ipynb  test.py
notebooks/eda/: clean_gbif_eda.ipynb  data_splits.ipynb  db_viz.ipynb  features.ipynb  features_old.ipynb  features_selection copy.ipynb  features_selection.ipynb  gbif_citizen_labeled_eda.ipynb  model.ipynb  model_02.ipynb  model_load.ipynb  model_multi.ipynb  observer_features_eda.ipynb  observers_inat_viz.ipynb  preprocessed_gbif_eda.ipynb  score.ipynb
notebooks/features/: df.ipynb  features.ipynb
notebooks/loaders/: gbif_csv.json  gbif_dwca.json  gbif_parquet.json  inat_api.ipynb  inat_obs_api.ipynb  inat_species_api.ipynb  observations.json  sampleRange.ipynb
notebooks/preprocess/: clean_gbif_eda.ipynb  dataclean.ipynb  eda.ipynb  matched_gbif_eda.ipynb  obs.json
pipeline/: pipe.yaml
pipelines/pipe_test/: main.py
src/: test.json
src/CScorer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/Cscorer/: __init__.py  cli.py  core.py  main.py  test_docs.py
src/obsq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: db_con.py  gbif_query.py  gee.py  pipe_objects.py  scraper.py  status.py
(+304 files in other folders)
