[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "obsq"
version = "0.1.0"
description = "Citizen Science Observation Quality Scorer"
authors = [{ name="Etienne Godin", email="etiennegodin@duck.com" }]

[project.optional-dependencies]
dev = ["pytest", "black", "ipykernel", "python-dotenv", "rich", "pre-commit"]

[project.scripts]   # <-- entry point CLI
obsq = "obsq.cli:main"
